--- a/SEA_Application/Views/AspNetNotes/Create.cshtml
+++ b/SEA_Application/Views/AspNetNotes/Create.cshtml
@@ -71,6 +71,7 @@ else if (User.IsInRole("Receptionist"))
                                 <select name="CourseType" class="form-control" required>
                                     <option value="CSS">CSS</option>
                                     <option value="PMS">PMS</option>
+                                    <option value="OnePaper">OnePaper</option>
                                 </select>
                                 <span id="Phone-Error" class="text-danger"></span>
                             </div>
