--- a/SEA_Application/Views/AspNetNotes/Edit.cshtml
+++ b/SEA_Application/Views/AspNetNotes/Edit.cshtml
@@ -94,8 +94,9 @@ else if (User.IsInRole("Receptionist"))
                                 @Html.DropDownListFor(model => model.CourseType, new List<SelectListItem>() {
                             new SelectListItem {Text="CSS", Value="CSS"},
                             new SelectListItem { Text="PMS",Value="PMS"},
+                            new SelectListItem { Text="OnePaper",Value="OnePaper"},
 
-
+                               
                            }, new { @class = "form-control" })
 
                                 @Html.ValidationMessageFor(model => model.CourseType, "", new { @class = "text-danger" })
