--- a/SEA_Application/Views/AspNetNotes/PendingOrdersDetails.cshtml
+++ b/SEA_Application/Views/AspNetNotes/PendingOrdersDetails.cshtml
@@ -163,19 +163,21 @@
 
 
 
-        <div id="bill" style="margin-left:30px;display:none">
+        <div id="bill" style="display:none">
 
             <div class="ticket" id="ticket">
-                <br>
+              
                 <center>
-
-                    <img src="~/Content/print-receipt-thermal-printer-master/print-receipt-thermal-printer-master/logo.PNG" />
+                    <h2 style="float:left">Officers Academy</h2> <img style="width:50px;float:right" src="~/Content/assets/assets/img/orignal.png" alt="Alternate Text" />
+                    @*<img src="~/Content/print-receipt-thermal-printer-master/print-receipt-thermal-printer-master/logo.PNG" />*@
                 </center>
 
+                <div style="clear:both">
 
+                </div>
                 <p class="centered">
-                    Officer's Academy
-                    <br><span id="OrderNo"></span>
+                    @*Officers Academy*@
+                  <span id="OrderNo"></span>
                     <br><span id="DateTime"></span>
                 </p>
 
@@ -200,27 +202,30 @@
                     <tbody id="billbody" style="border: 1px solid black"></tbody>
                 </table>
                 <p class="centered">
-                    Thanks for your purchase!
-                    <br>Developed by : TheRiskAdvisors
+                    Website: https://officersacademy.pk/
+                    <br>Facebook Page: https://www.facebook.com/officersacademylahore
                 </p>
             </div>
 
         </div>
         <br />
 
-        <div id="bill1" style="margin-left:30px;display:none">
+        <div id="bill1" style="margin-left:10px;display:none">
 
             <div class="ticket" id="ticket">
-                <br>
+
                 <center>
 
-                    <img src="~/Content/print-receipt-thermal-printer-master/print-receipt-thermal-printer-master/logo.PNG" />
+                    @*<img src="~/Content/print-receipt-thermal-printer-master/print-receipt-thermal-printer-master/logo.PNG" />*@
+                    <h2 style="float:left">Officers Academy</h2> <img style="width:50px;float:right" src="~/Content/assets/assets/img/orignal.png" alt="Alternate Text" />
                 </center>
+                <div style="clear:both">
 
+                </div>
 
                 <p class="centered">
-                    Officer's Academy
-                    <br><span id="OrderNo1"></span>
+
+                  <span id="OrderNo1"></span>
                     <br><span id="DateTime1"></span>
                 </p>
 
@@ -246,8 +251,8 @@
                     <tbody id="billbody1" style="border: 1px solid black"></tbody>
                 </table>
                 <p class="centered">
-                    Thanks for your purchase!
-                    <br>Developed by : TheRiskAdvisors
+                    Website: https://officersacademy.pk/
+                    <br>Facebook Page: https://www.facebook.com/officersacademylahore
                 </p>
             </div>
 
