--- a/SEA_Application/Views/GrandTotal/StudentFee.cshtml
+++ b/SEA_Application/Views/GrandTotal/StudentFee.cshtml
@@ -106,12 +106,12 @@ else if (User.IsInRole("Staff"))
     }
 
     #bill {
-        margin-left: 30px;
+      
         display: none;
     }
 
     #bill1 {
-        margin-left: 30px;
+      
         display: none;
     }
 
@@ -424,19 +424,22 @@ else if (User.IsInRole("Staff"))
 
                         <br />
                         <br />
-                        <div id="bill" style="margin-left:30px">
+                        <div id="bill"   >
 
                             <div class="ticket" id="ticket">
-                                <br>
-                                <center>
-                                    <img src="/Content/print-receipt-thermal-printer-master/print-receipt-thermal-printer-master/logo.PNG" />
 
+                                <center>
+                                    <h2 style="float:left">Officers Academy</h2> <img style="width:50px;float:right" src="~/Content/assets/assets/img/orignal.png" alt="Alternate Text" />
+                                    @*<img src="~/Content/print-receipt-thermal-printer-master/print-receipt-thermal-printer-master/logo.PNG" />*@
                                 </center>
 
+                                <div style="clear:both">
 
+                                </div>
+                                
                                 <p class="centered">
-                                    Officer's Academy
-                                    <br><span id="Recipt">Recipt#<span id="challanNo"></span> </span>
+                                
+                                    <span id="Recipt">Recipt#<span id="challanNo"></span> </span>
                                     <br><span id="DateTime"></span>
                                 </p>
 
@@ -457,7 +460,8 @@ else if (User.IsInRole("Staff"))
                                     <tbody id="billbody" style="border: 1px solid black"></tbody>
                                 </table>
                                 <p class="centered">
-                                    <br>Developed by : TheRiskAdvisors
+                                    Website: https://officersacademy.pk/
+                                    <br>Facebook Page: https://www.facebook.com/officersacademylahore
                                 </p>
                             </div>
 
@@ -468,19 +472,23 @@ else if (User.IsInRole("Staff"))
 
 
                         <!--slip 2-->
-                        <div id="bill1" style="margin-left:30px">
+                        <div id="bill1" style="" >
 
                             <div class="ticket" id="ticket">
-                                <br>
-                                <center>
-                                    <img src="/Content/print-receipt-thermal-printer-master/print-receipt-thermal-printer-master/logo.PNG" />
 
+                                <center>
+                                    <h2 style="float:left">Officers Academy</h2> <img style="width:50px;float:right" src="~/Content/assets/assets/img/orignal.png" alt="Alternate Text" />
+                                    @*<img src="~/Content/print-receipt-thermal-printer-master/print-receipt-thermal-printer-master/logo.PNG" />*@
                                 </center>
+
+                                <div style="clear:both">
+
+                                </div>
 
 
                                 <p class="centered">
-                                    Officer's Academy
-                                    <br><span id="Recipt1">Recipt#<span id="challanNo1"></span> </span>
+                                  
+                                   <span id="Recipt1">Recipt#<span id="challanNo1"></span> </span>
                                     <br><span id="DateTime1"></span>
                                 </p>
 
@@ -502,7 +510,8 @@ else if (User.IsInRole("Staff"))
                                     <tbody id="billbody1" style="border: 1px solid black"></tbody>
                                 </table>
                                 <p class="centered">
-                                    <br>Developed by : TheRiskAdvisors
+                                    Website: https://officersacademy.pk/
+                                    <br>Facebook Page: https://www.facebook.com/officersacademylahore
                                 </p>
                             </div>
 
