--- a/SEA_Application/Views/Shared/_AdminDashboardLayout.cshtml
+++ b/SEA_Application/Views/Shared/_AdminDashboardLayout.cshtml
@@ -176,7 +176,7 @@
         </li>*@
 
                     <li class="nav-item">
-                        <a href="@Url.Action("Index", "Expense" )" class="nav-link nav-toggle">
+                        <a href="@Url.Action("ExpenseList", "Expense" )" class="nav-link nav-toggle">
 
                             <i class="sea-dash">
                                 <img style="width: 18px;line-height: 30px;font-size: 24px;vertical-align: -1px;" src="~/Content/assets/assets/icons/icon-student-assignments.png" alt="">
